Fix clipping on descenders in some fonts

--- a/assets/scss/components/_case-study.scss
+++ b/assets/scss/components/_case-study.scss
@@ -92,7 +92,7 @@
   }
   .word,
   &__meta-tag {
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 115%, 0 115%);
     transform: translateY(0);
     transition: all 0.8s $ease--out-expo;
   }
